lps restruct: pull in spacing fix from sections branch

--- a/angular/src/app/landing/landingpage.component.css
+++ b/angular/src/app/landing/landingpage.component.css
@@ -4,12 +4,16 @@
     border: 0px;
 }
 
-.landingcard h3 {
+.landing-body {
+    border: 0px;
+}
+
+.landing-body h3 {
     font-size: 1.25em;
     font-weight: 400;
 }
 
-.landingcard h2 {
+.landing-body h2 {
     font-size: 1.375em;
     font-weight: 400;
 }
